# joint-failure-rag-eval

./: .env.example  .gitignore  METHODOLOGY.md  POST_HOC_PIVOT.md  README.md  pyproject.toml  requirements.txt
jfre/: __init__.py  types.py
jfre/judges/: __init__.py  _llm_judge_prompt.py  _retry.py  alignscore_judge.py  claude_judge.py  faithjudge.py  glm_cerebras_judge.py  hhem_judge.py  minicheck_judge.py  mistral_judge.py  qwen_cerebras_judge.py  ragas_judge.py
jfre/operators/: __init__.py  citation_relocation.py  distractor_parroting.py  entity_swap.py  hedge_insertion.py  numeric_drift.py  paraphrase_null.py
jfre/seeds/: __init__.py  expertqa.py  expertqa_cited.py  hotpotqa.py
results/preview_pilot/: analysis.txt  analysis_8judges_500seeds.txt  analysis_8judges_75seeds.txt
scripts/: analyze_combined.py  analyze_preview_pilot.py  chain_75_then_500.sh  chain_after_500.sh  download_hotpotqa.py  hypothesis_check.py  hypothesis_check_v2.py  run_citation_relocation_pilot.py  run_preview_pilot.py  smoke_alignscore.py  smoke_distractor_parroting.py  smoke_entity_swap.py  smoke_expertqa.py  smoke_faithjudge.py  smoke_hedge_insertion.py  smoke_hhem.py  smoke_hotpotqa_with_operators.py  smoke_minicheck.py  smoke_numeric_drift.py  smoke_paraphrase_null.py  smoke_ragas.py  smoke_three_judges.py
