[project]
name = "jfre"
version = "0.0.1"
description = "Joint-failure cross-judge evaluation for RAG faithfulness metrics"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.40",
    "datasets>=3.0",
    "huggingface_hub>=0.27",
    "numpy>=2.0",
    "pandas>=2.2",
    "pydantic>=2.5",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["jfre*"]
exclude = ["scripts*", "tests*", "data*", "results*"]
